--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 *.swp
 tests/*.out
 build/
-dist/MufSimulator
-dist/MufSimulator.app
-dist/MufSim.app
+dist/MufSim
+dist/*.app
+dist/*.exe
 .ropeproject
