Removed dist items from git repo.

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,5 @@
 *.swp
 tests/*.out
 build/
-dist/MufSim
-dist/*.app
-dist/*.exe
-dist/MufSim-*.tar.gz
-dist/MufSim-*.whl
-dist-win
+dist/
 .ropeproject
